--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ build:
     - conda-skeleton = conda_build.cli.main_skeleton:main
 
 requirements:
-  build:
+  host:
     - python
     - setuptools
 
@@ -105,6 +105,7 @@ extra:
   recipe-maintainers:
     - jakirkham
     - jjhelmus
+    - mingwandroid
     - msarahan
     - mwcraig
     - ocefpaf
