Remove Python 2.x-isms.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,19 +32,15 @@ requirements:
     - beautifulsoup4
     - chardet
     - conda  >=4.5
-    - contextlib2        # [py27]
-    - enum34             # [py27]
     - filelock
-    - futures            # [py27]
     - jinja2
     - patchelf      # [linux]
     - pkginfo
     - psutil
+    - py-lief  # [not win]
     - python
-    - py-lief  # [not (win and py2k)]
     - pyyaml
     - ripgrep            # [x86_64 and not win]
-    - scandir            # [py27]
     - setuptools
     - six
     - glob2 >=0.6
