--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - python
     - pip
     - conda-package-handling >=1.3
+    - wheel
   run:
     - beautifulsoup4
     - chardet
