Add a few more modules to import tests.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,6 +67,9 @@ test:
 
   imports:
     - conda_build
+    - conda_build.api
+    - conda_build.cli.main_build
+    - conda_build.cli.main_render
 
   commands:
     # Check for all subcommands
