--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "conda-build" %}
 {% set version = "3.21.8" %}
-{% set build_number = "2" %}
+{% set build_number = "3" %}
 {% set sha256 = "0031aff4a34e66340f90428051d480c6c456c89e267f78cf5987126bee68ca5b" %}
 
 
@@ -11,6 +11,8 @@ package:
 source:
   url: https://github.com/conda/{{ name }}/releases/download/{{ version }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - ignore_libstdcxx-ng.patch
 
 build:
   number: {{ build_number }}
@@ -26,6 +28,8 @@ build:
     - conda-skeleton = conda_build.cli.main_skeleton:main
 
 requirements:
+  build:
+    - patch
   host:
     - python
     - pip
