Add patch/m2-patch hard dependencies

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,8 @@ requirements:
     - glob2 >=0.6
     - jinja2
     - patchelf      # [linux]
+    - patch     >=2.6   # [not win]
+    - m2-patch  >=2.6   # [win]
     - pkginfo
     - psutil
     - py-lief
