--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,6 @@ requirements:
     - patchelf      # [linux]
     - patch     >=2.6   # [not win]
     - m2-patch  >=2.6   # [win]
-    - pip
     - pkginfo
     - psutil
     - py-lief
@@ -60,12 +59,13 @@ requirements:
     - conda-verify >=3.1.0
 
 test:
-  # If you run the test suite (~10 min), these are required
-  # requires:
-  #   - pytest
-  #   - pytest-cov
-  #   - pytest-xdist
-  #   - pytest-env
+  requires:
+    - pip
+    # If you run the test suite (~10 min), these are required
+    # - pytest
+    # - pytest-cov
+    # - pytest-xdist
+    # - pytest-env
 
   files:
     - test_bdist_conda_setup.py
