--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "conda-build" %}
-{% set version = "3.24.0" %}
+{% set version = "3.25.0" %}
 {% set build_number = "0" %}
-{% set sha256 = "e018d415948bdfba969c84e0bd4c7fbc2692372d030ac021f09e40cfe19c7341" %}
+{% set sha256 = "23df96d2a35096a70bd60b5df19c126ecc3445358b64479f410bbb2196170383" %}
 
 
 package:
@@ -15,6 +15,7 @@ source:
 build:
   skip: True  # [py<38]
   number: {{ build_number }}
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
   entry_points:
     - conda-build = conda_build.cli.main_build:main
     - conda-convert = conda_build.cli.main_convert:main
@@ -27,17 +28,19 @@ build:
     - conda-skeleton = conda_build.cli.main_skeleton:main
 
 requirements:
+  build:
+    - git
   host:
     - python
     - pip
-    - conda-package-handling >=1.3
-    - setuptools
-    - wheel
+    - hatchling >=1.12.2
+    - hatch-vcs >=0.2.0
   run:
     - beautifulsoup4
     - cctools # [osx]
     - chardet
     - conda >=4.13
+    - conda-index
     - conda-package-handling >=1.3
     - filelock
     - glob2 >=0.6
@@ -54,68 +57,37 @@ requirements:
     - pytz
     - pyyaml
     - requests
-    - ripgrep            # [x86_64 and not win]
     - six
     - tomli         # [py<311]
     - tqdm
-
   run_constrained:
     - conda-verify >=3.1.0
 
 test:
+  imports:
+    # high-level import
+    - conda_build
+    # updated submodules (can be dropped after 1-2 releases)
+    - conda_build.index
   requires:
-    - pip
-    # If you run the test suite (~10 min), these are required
-    # - pytest
-    # - pytest-cov
-    # - pytest-xdist
-    # - pytest-env
-
+    - setuptools
   files:
     - test_bdist_conda_setup.py
-
-  imports:
-    - conda_build
-    - conda_build.api
-    - conda_build.cli
-    - conda_build.cli.main_build
-    - conda_build.cli.main_render
-    - conda_build.jinja_context
-    - conda_build.os_utils
-    - conda_build.skeletons
-
   commands:
-    # Check for all subcommands
-    - type -P conda-build    # [unix]
-    - where conda-build      # [win]
-    - conda-build -h
-    - type -P conda-convert   # [unix]
-    - where conda-convert     # [win]
-    - conda-convert -h
-    - type -P conda-develop   # [unix]
-    - where conda-develop     # [win]
-    - type -P conda-debug     # [unix]
-    - where conda-debug       # [win]
-    - conda-develop -h
-    - type -P conda-index     # [unix]
-    - where conda-index       # [win]
-    - conda-index -h
-    - type -P conda-inspect   # [unix]
-    - where conda-inspect     # [win]
-    - conda-inspect linkages -h \| grep "--name ENVIRONMENT"  # [unix]
-    - conda-inspect objects -h \| grep "--name ENVIRONMENT"   # [osx]
-    - conda-inspect -h
-    - type -P conda-metapackage  # [unix]
-    - where conda-metapackage    # [win]
-    - conda-metapackage -h
-    - type -P conda-render    # [unix]
-    - where conda-render      # [win]
-    - conda-render -h
-    - type -P conda-skeleton  # [unix]
-    - where conda-skeleton    # [win]
-    - conda-skeleton -h
-
-    # Check for bdist_conda
+    # builtin subcommands
+    - conda --help
+    - conda build --help
+    - conda convert --help
+    - conda develop --help
+    - conda index --help
+    - conda inspect --help
+    - conda inspect linkages --help  # [unix]
+    - conda inspect objects --help  # [osx]
+    - conda metapackage --help
+    - conda render --help
+    - conda skeleton --help
+    - conda debug --help
+    # bdist_conda
     - python test_bdist_conda_setup.py bdist_conda --help
 
 about:
@@ -123,7 +95,7 @@ about:
   summary: tools for building conda packages
   license: BSD-3-Clause
   license_family: BSD
-  license_file: LICENSE.txt
+  license_file: LICENSE
   description: |
     Conda-build contains commands and tools to allow you to build your own
     packages for conda.
